--- a/portfolio.html
+++ b/portfolio.html
@@ -9,17 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+  />
   </head>
   <body>
     <header class="header">
       <div class="container container-header">
         <nav class="header-navigation">
           <a
-            class="header-logo link"
-            href="./index.html"
+            class="header-logo link" href="./index.html"
             target="_self"
             rel="noopener noreferrer"
-          >
+           >
             <span class="web-logo">WEB</span
             ><span class="studio-logo studio-header">STUDIO</span>
           </a>
@@ -30,8 +33,7 @@
                 href="./index.html"
                 target="_self"
                 rel="noopener noreferrer"
-                >Studio</a
-              >
+                >Studio</a>
             </li>
             <li class="header-item">
               <a
@@ -68,125 +70,97 @@
       </div>
     </header>
     <main>
-      <section class="section projects-no-padding-top">
-        <div class="container projects-buttons">
-        <ul class="port-buttons-list list">
-          <li class="port-buttons-item">
-            <button
-              class="port-buttons-item-list current-filter buttons-port"
-              type="button"
-            >
-              All
-            </button>
-          </li>
-          <li class="port-buttons-item">
-            <button class="port-buttons-item-list buttons-port" type="button">
-              Web Site
-            </button>
-          </li>
-          <li class="port-buttons-item">
-            <button class="port-buttons-item-list buttons-port" type="button">
-              App
-            </button>
-          </li>
-          <li class="port-buttons-item">
-            <button class="port-buttons-item-list buttons-port" type="button">
-              Design
-            </button>
-          </li>
-          <li class="port-buttons-item">
-            <button class="port-buttons-item-list buttons-port" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-      </div>
+      <section class="section projects-other-padding-top">
+        <div class="container projects-category">
 
-      <div class="container projects-list">
-        <ul class="projects-list list">
-          <li class="projects-item">
-            <img
-              src="./images/port-image-1.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">
-              Banking App Interface Concep
-            </h3>
-            <p class="projects-item-text text-item">App</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-2.jpg"
-              alt="Payment App"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Cashless Payment</h3>
-            <p class="projects-item-text text-item">Marketing</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-3.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Meditation App</h3>
-            <p class="projects-item-text text-item">App</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-4.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Taxi Service</h3>
-            <p class="projects-item-text text-item">Marketing</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-5.jpg"
-              alt="Screen Design"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Screen Illustrations</h3>
-            <p class="projects-item-text text-item">Design</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-6.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Online Courses</h3>
-            <p class="projects-item-text text-item">Marketing</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-7.jpg"
-              alt="Instagram Stories"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">
-              Instagram Stories Concept
-            </h3>
-            <p class="projects-item-text text-item">Design</p>
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/port-image-8.jpg"
-              alt="Organic Food"
-              width="360"
-            />
-            <h3 class="projects-item-title title-item">Organic Food</h3>
-            <p class="projects-item-text text-item">Web Site</p>
-          </li>
-          <li class="projects-item">
-            <img src="./images/port-image-9.jpg" alt="Coffee" width="360" />
-            <h3 class="projects-item-title title-item">Fresh Coffee</h3>
-            <p class="projects-item-text text-item">Web Site</p>
-          </li>
-        </ul>
-      </div>
+          <ul class="port-buttons-list list">
+            <li>
+              <button class="buttons-port current-active" type="button">All</button>
+            </li>
+
+            <li>
+              <button class="buttons-port" type="button">Web Site</button>
+            </li>
+
+            <li>
+              <button class="buttons-port" type="button">App</button>
+            </li>
+
+            <li>
+              <button class="buttons-port" type="button">Design</button>
+            </li>
+
+            <li>
+              <button class="buttons-port" type="button">Marketing</button>
+            </li>
+          </ul>
+
+          <ul class="projects-list list">
+            <li class="projects-item">
+              <img src="./images/port-image-1.jpg" alt="Banking App" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Banking App Interface Concep</h3>
+                  <p class="projects-text text-item">App</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-2.jpg" alt="Payment App" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Cashless Payment</h3>
+                  <p class="projects-text text-item">Marketing</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-3.jpg" alt="Meditation App" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Meditation App</h3>
+                  <p class="projects-text text-item">App</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-4.jpg" alt="Taxi Service" width="360"/>
+                <div class="card-projects-text">  
+                  <h3 class="projects-title title-item">Taxi Service</h3>
+                  <p class="projects-text text-item">Marketing</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-5.jpg" alt="Screen Design" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Screen Illustrations</h3>
+                  <p class="projects-text text-item">Design</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-6.jpg" alt="Online Courses" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Online Courses</h3>
+                  <p class="projects-text text-item">Marketing</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-7.jpg" alt="Instagram Stories" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Instagram Stories Concept</h3>
+                  <p class="projects-text text-item">Design</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-8.jpg" alt="Organic Food" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Organic Food</h3>
+                  <p class="projects-text text-item">Web Site</p>
+                </div>
+            </li>
+            <li class="projects-item">
+              <img src="./images/port-image-9.jpg" alt="Coffee" width="360"/>
+                <div class="card-projects-text">
+                  <h3 class="projects-title title-item">Fresh Coffee</h3>
+                  <p class="projects-text text-item">Web Site</p>
+                </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
